--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,6 @@ jobs:
         - uses: actions/checkout@master
           with:
             name: liferay-latam/liferay-portal
-            token: ${{ secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.PAT_TOKEN }}
         - name: Sync master
           run: git push origin upstream/master:master
