--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,8 @@ jobs:
           with:
             repository: liferay-latam/liferay-portal
             token: ${{ secrets.PAT_TOKEN }}
+        - run: git remote add upstream https://github.com/liferay/liferay-portal.git
+        - run: git fetch --all
         - name: Sync master
           run: git push origin upstream/master:master
           env:
