--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
             repository: liferay-latam/liferay-portal
             token: ${{ secrets.PAT_TOKEN }}
         - run: git remote add upstream https://github.com/liferay/liferay-portal.git
-        - run: git fetch --all
+        - run: git fetch upstream
         - name: Sync master
           run: git push origin upstream/master:master
           env:
